src/test/compile-fail/issue-3099-b.rs
module a {}

module a {} //~ ERROR Duplicate definition of module a

fn main() {}
